--- a/BimTeamTools/Filter/FilterView.xaml
+++ b/BimTeamTools/Filter/FilterView.xaml
@@ -37,6 +37,15 @@
     </TreeView>
         <Button Content="Button" HorizontalAlignment="Left" Margin="249,10,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
         <TextBox Name ="textBox" HorizontalAlignment="Left" Height="104" Margin="249,44,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120" />
-        <ComboBox Name ="cbParameter1" HorizontalAlignment="Left" Margin="249,166,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="cbParameter1_SelectionChanged"/>
+        <ComboBox
+          Name ="cbParameter1"
+          HorizontalAlignment="Left"
+          Margin="249,166,0,0"
+          VerticalAlignment="Top"
+          Width="120"
+          SelectionChanged="cbParameter1_SelectionChanged"
+          DropDownOpened="cbParameter1_OnDropDownOpened"
+          DisplayMemberPath="Key"
+          SelectedValuePath="Value"/>
     </Grid>
 </Window>
