--- a/BimTeamTools/Filter/FilterView.xaml
+++ b/BimTeamTools/Filter/FilterView.xaml
@@ -38,17 +38,17 @@
     <Button
         Content="Выбрать"
         HorizontalAlignment="Left"
-        Margin="317,205,0,0"
+        Margin="334,207,0,0"
         VerticalAlignment="Top"
         Width="75"
         Click="Button_Click"/>
     <Grid HorizontalAlignment="Left" Height="120
-              " Margin="317,10,0,0" VerticalAlignment="Top" Width="450">
+              " Margin="334,10,0,0" VerticalAlignment="Top" Width="450">
       <Grid.RowDefinitions>
-        <RowDefinition Height="30*"/>
-        <RowDefinition Height="30*"/>
-        <RowDefinition Height="30*"/>
-        <RowDefinition Height="30*"/>
+        <RowDefinition/>
+        <RowDefinition/>
+        <RowDefinition/>
+        <RowDefinition Height="Auto"/>
       </Grid.RowDefinitions>
       <Grid.ColumnDefinitions>
         <ColumnDefinition Width="150*"/>
@@ -63,7 +63,6 @@
         Width="120"
         Margin="0,0,0,9"
         SelectionChanged="cbParameter1_SelectionChanged"
-        DropDownOpened="cbParameter1_OnDropDownOpened"
         Grid.Row="0" Grid.Column="0"/>
       <ComboBox
         x:Name="cbOperation1"
@@ -87,7 +86,6 @@
         Width="120"
         Margin="0,0,0,9"
         SelectionChanged="cbParameter2_SelectionChanged"
-        DropDownOpened="cbParameter2_OnDropDownOpened"
         Grid.Row="1" Grid.Column="0"/>
       <ComboBox
         x:Name="cbOperation2"
@@ -111,7 +109,6 @@
         Width="120"
         Margin="0,0,0,9"
         SelectionChanged="cbParameter3_SelectionChanged"
-        DropDownOpened="cbParameter3_OnDropDownOpened"
         Grid.Row="2" Grid.Column="0" />
       <ComboBox
         x:Name="cbOperation3"
@@ -135,7 +132,6 @@
         Width="120"
         Margin="0,0,0,9"
         SelectionChanged="cbParameter4_SelectionChanged"
-        DropDownOpened="cbParameter4_OnDropDownOpened"
         Grid.Row="3" Grid.Column="0"/>
       <ComboBox
         x:Name="cbOperation4"
@@ -158,7 +154,7 @@
           x:Name="andCheckBox"
           Content="И"
           HorizontalAlignment="Left"
-          Margin="317,135,0,0"
+          Margin="334,162,0,0"
           VerticalAlignment="Top"
           PreviewMouseLeftButtonDown="AndMouseLeftButtonDown"
           IsChecked="True"/>
@@ -166,10 +162,18 @@
           x:Name="orCheckBox"
           Content="ИЛИ"
           HorizontalAlignment="Left"
-          Margin="317,153,0,0"
+          Margin="334,180,0,0"
           VerticalAlignment="Top"
           PreviewMouseLeftButtonDown="OrMouseLeftButtonDown"/>
-    <TextBlock x:Name="textElementsCount" HorizontalAlignment="Left" Margin="431,237,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top"/>
-    <Label Content="Выбрано элементов:" HorizontalAlignment="Left" Margin="312,232,0,0" VerticalAlignment="Top"/>
+    <TextBlock x:Name="textElementsCount" HorizontalAlignment="Left" Margin="448,237,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top"/>
+    <Label Content="Выбрано элементов:" HorizontalAlignment="Left" Margin="330,232,0,0" VerticalAlignment="Top"/>
+    <Button
+          Content="=>"
+          HorizontalAlignment="Left"
+          Margin="279,10,0,0"
+          VerticalAlignment="Top"
+          Width="36"
+          Height="110"
+          Click="CollectParameters_Click"/>
   </Grid>
 </Window>
